# vt_dual_franka

./: .gitignore  COMMANDS.md  EXPERIMENTS.md  PLAN.md  README.md  gelsight_bandwidth_standalone.py  prompt.txt  revamp.md  todo.md
robot_workspace/: README.md  environment.yml  pyproject.toml
robot_workspace/Log/: OrbbecSDK.log.txt
robot_workspace/config/: gripper_testbed.yaml  gripper_testbed_franka_ros.yaml  workspace.yaml
robot_workspace/config/inference/: bimanual_demo_dp.yaml  erasing_visuotactile.yaml  mpd_state.yaml  pencil_insertion_visuotactile.yaml  replay.yaml  usb_insertion_visuotactile.yaml
robot_workspace/config/policies/: dp_bimanual_demo.yaml  mpd_dp_state.yaml  mpd_fm_state.yaml  mpd_freqpolicy_state.yaml  mpd_motif_state.yaml  mpd_motif_state_gripper_open_smooth_t050.yaml  mpd_motif_state_gripper_open_smooth_t050_modes1.yaml  mpd_motif_state_gripper_open_smooth_t050_modes2.yaml  mpd_motif_state_gripper_open_smooth_t050_modes4.yaml  mpd_motif_state_timefix.yaml  (+21 more)
robot_workspace/scripts/: bootstrap_env.sh  start_gelsight.sh  start_state_bridge.sh  start_teleop.sh
robot_workspace/tests/: test_bimanual_dual_baseline.py  test_cli_config.py  test_collect_supervisor.py  test_common_dataset.py  test_data_collector.py  test_episode_alignment.py  test_episode_qc.py  test_gelsight_publisher.py  test_gripper_testbed.py  test_mpd_policy.py  test_operator_ui.py  test_orbbec.py  test_policy_runner.py  test_quest_udp.py  test_recording.py  test_replay.py  test_reset.py  test_rollout_supervisor.py  test_runtime_motion.py  test_teleop.py  test_visuotactile.py
(+1234 files in other folders)
